--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,14 @@ img {
 	width: 30%;
 	margin: 1.66%;
 }
+
+p {
+	font-family: sans-serif;
+	text-transform: uppercase;
+	margin-left: 1.66%;
+	border-bottom: 3px solid #D1D1D1;
+	width: 30%;
+	font-weight: bold;
+	padding-bottom: 20px;
+	font-size: 23px;
+}
